--- a/net-config.yaml
+++ b/net-config.yaml
@@ -1,10 +1,10 @@
 imports:
   - path: network.jinja
 resources:
--name: network
+-name: kraken-prod-vpc
  type: network.jinja
  properties:
    region: us-east1
    subnets:
-     -range:
-      name:
+     -range: 10.0.0.0/28
+      name: kranek-prod-subnet
